2011-07-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-emacs): Don't use widgets to provide
	clickable links, since that requires you to select certain parts
	of the line, which is annoying.
	(debbugs-show-reports): Store the status in the buffer.

2011-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-emacs, debbugs-show-reports): Rewrite in
	order to use widgets exclusively.
	(debbugs-widget-format-handler): New defun.
	(debbugs-mode-map): Derive from `special-mode-map'. Use
	`widget-keymap' as parent map.
	(debbugs-select-report): Add bug id as parameter.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-emacs): Move reporting lines to
	`debbugs-show-reports'.  Create widgets for every report page.
	(debbugs-show-reports): New defun.
	(debbugs-select-report): Handle also page links.

2011-07-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-summary-mode): Make sure we don't Cc
	both bug-gnu-emacs (etc) and debbugs.
	(debbugs-emacs): Default to list the done bugs.
	(debbugs-toggle-sort): New command and keystroke.
	(debbugs-send-control-message): Record the bug number on group
	entry, so that we don't have to rely on subject header mangling,
	which is fragile.
	(debbugs-emacs): Display multiple merges prettier.
	(debbugs-toggle-sort): Allow sorting from the final line.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-emacs): Propertize with 'help-echo.
	(debbugs-mode-map): Define key "q".
	(debbugs-send-control-message): Prompt for version number for
	"close" and "done" control messages.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-new, debbugs-handled, debbugs-stale)
	(debbugs-done, debbugs-emacs, debbugs-mode-map, debbugs-mode)
	(debbugs-select-report, debbugs-summary-mode-map)
	(debbugs-summary-mode, debbugs-send-control-message): Move to ...
	* debbugs-gnu.el: New file.
